--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-4 text-md-end">
-                <a href="tambah-produk.html" class="btn btn-primary btn-add">
+                <a href="/add_product" class="btn btn-primary btn-add">
                     <i class="fas fa-plus"></i>
                     Tambah Produk
                 </a>
