--- a/tambah-produk.html
+++ b/tambah-produk.html
@@ -106,7 +106,7 @@
             <div class="card-body p-4">
                 <h1 class="page-header mb-4">Tambah Produk Baru</h1>
                 
-                <form action="/scan" method="POST" enctype="multipart/form-data">
+                <form action="/api/add_product" method="POST" enctype="multipart/form-data">
                     <div class="row g-4">
                         <div class="col-12 col-md-6">
                             <div class="mb-3">
